--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   </nav>
 <header class="hero">
   <div class="hero-overlay">
-    <h1>Tiger Martial Arts</h1>
+    <h1>About Us</h1>
     <p>Built on discipline, driven by passion — our story inspires every step you take.</p> <!-- 🔁 Change this line per page -->
   </div>
 </header>
