--- a/instructors.html
+++ b/instructors.html
@@ -19,21 +19,49 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+  <!-- ✅ Hero Header with Tiger Background -->
+  <header style="
+    background: url('https://t3.ftcdn.net/jpg/09/85/34/06/360_F_985340695_QgDTpZpxMkkNjEjgGEip08y36wbNLUO3.jpg') 
+    no-repeat center center/cover;
+    height: 100vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    padding: 20px;
+  ">
+    <div style="
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 0;
+    "></div>
+    <h1 style="position: relative; z-index: 1; font-size: 4rem; text-shadow: 2px 2px 6px black; margin: 0;">
+      Our Masters of the Mat
+    </h1>
+    <p style="position: relative; z-index: 1; font-size: 1.5rem; max-width: 700px; margin-top: 20px; text-shadow: 1px 1px 3px black;">
+      Meet the experts guiding your martial arts journey with strength and discipline.
+    </p>
+  </header>
+
   <section class="section">
     <h2>Meet Our Instructors</h2>
     <div class="features">
-      <div class="feature">
-        <img src="https://example.com/instructor1.jpg" alt="Sensei John">
+      <div class="feature feature-full">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5bcI_PHSP4YAX2oaOvBgIO3ac3k-btn6qxg&s" alt="Sensei John">
         <h3>Sensei John Kimura</h3>
         <p>5th Dan Black Belt in Karate, 20 years of experience training adults and kids.</p>
       </div>
-      <div class="feature">
-        <img src="https://example.com/instructor2.jpg" alt="Coach Aisha">
+      <div class="feature feature-full">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJnwhk9IbTdhMEhjeQ81hTUvwU2B9zLthpnA&s" alt="Coach Aisha">
         <h3>Coach Aisha Rahman</h3>
         <p>Certified MMA Trainer and Women's Self-Defense Expert.</p>
       </div>
-      <div class="feature">
-        <img src="https://example.com/instructor3.jpg" alt="Trainer Alex">
+      <div class="feature feature-full">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTakheW7OIq6mEkCqJ0Y9X2SstxBxxX0X9sfQ&s" alt="Trainer Alex">
         <h3>Trainer Alex Smith</h3>
         <p>HIIT & Fitness Conditioning Coach with 10 years in strength training.</p>
       </div>
