--- a/membership.html
+++ b/membership.html
@@ -18,6 +18,12 @@
     <a href="instructors.html">Instructors</a>
     <a href="contact.html">Contact</a>
   </nav>
+<header class="hero">
+  <div class="hero-overlay">
+    <h1>Membership</h1>
+    <p>Join the pride — flexible memberships for every fighter's journey.</p> 
+  </div>
+</header>
 
   <section class="section">
     <h2>Membership Plans</h2>
