--- a/timetable.html
+++ b/timetable.html
@@ -18,6 +18,12 @@
     <a href="instructors.html">Instructors</a>
     <a href="contact.html">Contact</a>
   </nav>
+<header class="hero">
+  <div class="hero-overlay">
+    <h1>Timetable</h1>
+    <p>Train with purpose — find the perfect time to sharpen your skills.</p> <!-- 🔁 Change this line per page -->
+  </div>
+</header>
 
   <section class="section">
     <h2>Weekly Class Timetable</h2>
